# rmw_opensplice

./: README.md
opensplice_cmake_module/: CMakeLists.txt  opensplice_cmake_module-extras.cmake  package.xml
opensplice_cmake_module/cmake/Modules/: FindOpenSplice.cmake
opensplice_cmake_module/config/: ros_ospl.xml
opensplice_cmake_module/env_hook/: opensplice.bat.in  opensplice.sh.in
rmw_opensplice_cpp/: CMakeLists.txt  package.xml  rmw_opensplice_cpp-extras.cmake
rmw_opensplice_cpp/include/rmw_opensplice_cpp/impl/rmw/: get_service_type_support_handle.h  get_type_support_handle.h
rmw_opensplice_cpp/src/: demangle.cpp  event_converter.cpp  event_converter.hpp  functions.cpp  guid.hpp  identifier.cpp  identifier.hpp  misc.cpp  misc.hpp  names_and_types_helpers.h  opensplice_static_event_info.hpp  qos.cpp  qos.hpp  rmw_client.cpp  rmw_compare_gids_equal.cpp  rmw_count.cpp  rmw_event.cpp  rmw_get_encoding_identifier.cpp  rmw_get_topic_endpoint_info.cpp  rmw_get_topic_info.cpp  rmw_guard_condition.cpp  rmw_init.cpp  rmw_logging.cpp  rmw_node.cpp  rmw_node_info_and_types.cpp  rmw_node_names.cpp  rmw_publish.cpp  rmw_publisher.cpp  rmw_request.cpp  rmw_response.cpp  rmw_serialize.cpp  rmw_service.cpp  rmw_service_names_and_types.cpp  rmw_service_server_is_available.cpp  rmw_subscription.cpp  rmw_take.cpp  rmw_topic_names_and_types.cpp  rmw_trigger_guard_condition.cpp  rmw_wait.cpp  rmw_wait_set.cpp  (+8 more)
ros_middleware_opensplice_cpp/: CMakeLists.txt  package.xml
ros_middleware_opensplice_cpp/include/ros_middleware_opensplice_cpp/: MessageTypeSupport.h
ros_middleware_opensplice_cpp/include/ros_middleware_opensplice_cpp/impl/ros_middleware_interface/: get_service_type_support_handle.h  get_type_support_handle.h
ros_middleware_opensplice_cpp/src/: functions.cpp
rosidl_typesupport_opensplice_c/: CMakeLists.txt  package.xml  rosidl_typesupport_opensplice_c-extras.cmake.in
rosidl_typesupport_opensplice_c/cmake/: rosidl_typesupport_opensplice_c_generate_interfaces.cmake
rosidl_typesupport_opensplice_c/include/rosidl_typesupport_opensplice_c/: duration__type_support.h  identifier.h  time__type_support.h  visibility_control.h
rosidl_typesupport_opensplice_c/include/rosidl_typesupport_opensplice_c/impl/rosidl_generator_c/: message_type_support.h
rosidl_typesupport_opensplice_c/resource/: duration__type_support_c.cpp  msg__rosidl_typesupport_opensplice_c.h.em  msg__type_support.h.em  msg__type_support_c.cpp.em  msg__type_support_c.cpp.template  rosidl_typesupport_opensplice_c__visibility_control.h.in  srv__rosidl_typesupport_opensplice_c.h.em  srv__type_support_c.cpp.em  srv__type_support_c.cpp.template  time__type_support_c.cpp  visibility_control.h.in
rosidl_typesupport_opensplice_c/resource/include/builtin_interfaces/msg/: duration__rosidl_typesupport_opensplice_c.h  time__rosidl_typesupport_opensplice_c.h
rosidl_typesupport_opensplice_c/rosidl_typesupport_opensplice_c/: __init__.py
rosidl_typesupport_opensplice_c/src/: identifier.cpp
rosidl_typesupport_opensplice_cpp/: CMakeLists.txt  package.xml  rosidl_typesupport_opensplice_cpp-extras.cmake  rosidl_typesupport_opensplice_cpp-extras.cmake.in
rosidl_typesupport_opensplice_cpp/cmake/: rosidl_typesupport_opensplice_cpp_generate_interfaces.cmake
rosidl_typesupport_opensplice_cpp/include/rosidl_typesupport_opensplice_cpp/: Duration_TypeSupport.h  MessageTypeSupport.h  Requester.hpp  Responder.hpp  ServiceTypeSupport.h  Time_TypeSupport.h  duration__type_support.hpp  identifier.hpp  message_type_support.h  misc.hpp  requester.hpp  responder.hpp  service_type_support.h  service_type_support_decl.hpp  time__type_support.hpp  u__instanceHandle.h  visibility_control.h
rosidl_typesupport_opensplice_cpp/include/rosidl_typesupport_opensplice_cpp/impl/: error_checking.hpp
rosidl_typesupport_opensplice_cpp/include/rosidl_typesupport_opensplice_cpp/impl/rosidl_generator_cpp/: get_type_support_handle_impl.hpp  message_type_support.hpp  service_type_support.hpp
rosidl_typesupport_opensplice_cpp/resource/: Duration_TypeSupport.cpp  Time_TypeSupport.cpp  duration__type_support.cpp  msg_TypeSupport.cpp.template  msg_TypeSupport.h.template  msg__rosidl_typesupport_opensplice_cpp.hpp.em  msg__type_support.cpp.em  msg__type_support.cpp.template  msg__type_support.hpp.em  msg__type_support.hpp.template  srv_ServiceTypeSupport.cpp.template  srv__rosidl_typesupport_opensplice_cpp.hpp.em  srv__type_support.cpp.em  srv__type_support.cpp.template  time__type_support.cpp  visibility_control.h.in
rosidl_typesupport_opensplice_cpp/resource/include/builtin_interfaces/msg/: duration__rosidl_typesupport_opensplice_cpp.hpp  time__rosidl_typesupport_opensplice_cpp.hpp
rosidl_typesupport_opensplice_cpp/rosidl_typesupport_opensplice_cpp/: __init__.py  rosidl_generator_dds_idl_extension.py
rosidl_typesupport_opensplice_cpp/src/: identifier.cpp  misc.cpp  u_instanceHandle.c
