<?xml version="1.0"?>
<package format="2">
  <name>rmw_opensplice_cpp</name>
  <version>0.0.0</version>
  <description>Implement the ROS middleware interface using PrismTech OpenSplice static code generation in C++.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>opensplice_cmake_module</buildtool_depend>
  <buildtool_depend>rosidl_cmake</buildtool_depend>

  <buildtool_export_depend>ament_cmake</buildtool_export_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>

  <build_depend>libopensplice63</build_depend>
  <build_depend>rmw</build_depend>
  <build_depend>rosidl_generator_cpp</build_depend>
  <build_depend>rosidl_typesupport_opensplice_cpp</build_depend>
  <build_depend>rosidl_generator_dds_idl</build_depend>

  <build_export_depend>libopensplice63</build_export_depend>
  <build_export_depend>rosidl_generator_cpp</build_export_depend>
  <build_export_depend>rosidl_typesupport_opensplice_cpp</build_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
