<?xml version="1.0"?>
<package format="2">
  <name>rosidl_typesupport_opensplice_cpp</name>
  <version>0.0.0</version>
  <description>Generate the C++ interfaces for PrismTech OpenSplice.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>libopensplice63</buildtool_depend>
  <buildtool_depend>opensplice_cmake_module</buildtool_depend>
  <buildtool_depend>rosidl_cmake</buildtool_depend>
  <buildtool_depend>rosidl_generator_c</buildtool_depend>
  <buildtool_depend>rosidl_generator_cpp</buildtool_depend>

  <buildtool_export_depend>ament_cmake</buildtool_export_depend>
  <buildtool_export_depend>libopensplice63</buildtool_export_depend>
  <buildtool_export_depend>opensplice_cmake_module</buildtool_export_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>
  <buildtool_export_depend>rosidl_generator_c</buildtool_export_depend>
  <buildtool_export_depend>rosidl_generator_cpp</buildtool_export_depend>
  <buildtool_export_depend>rosidl_generator_dds_idl</buildtool_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
